<resources>
    <string name="desc_logo">SportGift Logo</string>
    <string name="desc_logo_activity">Exercises Logo</string>
    <string name="title_activity_login">Sign in SportGift app</string>
    <string name="title_activity_signup">Sign up in SportGift app</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="name">Name</string>
    <string name="dateborn">Date Born</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome">Welcome to SportGift App</string>
    <string name="desc_background">Background</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>

</resources>
